################################
# Unit Tests
################################

message(STATUS "TEST is empty!")
# Add test-ccnet file
#add_executable(ccnet-test ${SRC_TEST_RPCTABLE_H} test-ccnet.c)
#target_link_libraries(ccnet-test ${GLIB2_LIBRARIES} gobject-2.0 gio-2.0)
#target_link_libraries(ccnet-test ${JANSSON_LIBRARIES})
#target_link_libraries(ccnet-test libccnet)
#add_test(ccnet-test ccnet-test)
