################################
# Cluster
################################

message(STATUS "Cluster is abandoned!")
# Add ccnet-cserver
#add_definition(-DCCNET_SERVER -DCCNET_CLUSTER)
#add_executable(ccnet-cserver ${SRC_NET_CLUSTER})
#target_link_libraries(ccnet-cserver ${GLIB2_LIBRARIES} gobject-2.0 gio-2.0)
#target_link_libraries(ccnet-cserver ${JANSSON_LIBRARIES})
#target_link_libraries(ccnet-cserver libccnetd)
